--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -18,7 +18,16 @@ nav {
     border-bottom: 1px solid black;
     padding: 1vw;
 }
+.row:after{
+    content: "";
+    display: table;
+    clear: both;
+}
 
+.col-sm {
+    float: left;
+    width: 50%;
+}
 
 h2 {
     padding: 1vw;
