--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -55,3 +55,15 @@ footer {
 		width: 1vw;
 		margin:.15vw;
 	}
+
+    .col-sm {
+        float: left;
+        width: 50%;
+    }
+
+    .row::after {
+        content: "";
+        display: table;
+        clear: both;
+
+    }
