--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -59,7 +59,7 @@ footer {
     .col-sm {
         float: left;
         width: 50%;
-        padding: auto;
+        padding: 20px;
     }
 
     .row::after {
