--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -1,5 +1,5 @@
 .para {
-   padding-left: 3cm;
-   padding-top: 2cm;
-   position: relative; 
+   padding-left: 50px;
+   padding-top: 30px;
+   
 }
