--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -57,3 +57,12 @@ footer {
 		margin:.15vw;
 	}
 
+#aside {
+        width: 300px;
+        height: 50px;
+        float: right;
+        border-style: double;
+        text-align: center;
+        padding: 10px
+          }
+
