--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -74,3 +74,11 @@ footer {
 #page {
     text-align: center;
 }
+
+table, th, td {
+    border: 1px solid grey;
+
+    padding: 5px;
+    
+    border-collapse: collapse;
+}
